src/test/success/function_multiple_parameters.egern
func sum(a: int, b: int): int {
    return a + b
}

print(sum(3, 4))
