src/test/fail/redeclaring_parameter_fail.egern
func sameParams(x: int, y: int, x: int): int {
    return x * y
}

print(sameParams(1, 2, 3))
